kubernetes/apps/servitor-apps/mattermost/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mattermost-egress
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": mattermost
  egress:
    # shared CNPG cluster
    - toServices:
        - k8sService:
            serviceName: postgres-rw
            namespace: database-system
      toPorts:
        - ports:
            - { port: "5432", protocol: TCP }
    # DNS
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
